<resources>
    <string name="app_name">BantuMasak</string>
    <string name="welcome_slogan">Plan ahead, one meal at a time</string>
    <string name="welcome_logo">application logo</string>
    <string name="welcome_login">Log In</string>
    <string name="welcome_signup">Sign Up</string>
    <string name="register_greetings">Welcome!</string>
    <string name="register_greetings2">Daftarkan akun Anda terlebih dahulu untuk merencanakan masakan anda</string>
    <string name="register_emailhint">Email</string>
    <string name="register_passwordhint">Password</string>
    <string name="register_confirm_passwordhint">Confirm Password</string>
    <string name="register_sign_up">Sign Up</string>
    <string name="register_already_have_account">Already have account?</string>
    <string name="register_login">Log In</string>
    <string name="login_welcomeback">Welcome Back!</string>
    <string name="login_greetings">Senang bertemu kembali! \nSilahkan masukan isian berikut untuk login</string>
    <string name="login_don_t_have_account">Don’t have account?</string>
    <string name="optionmenu_logout">Logout</string>
    <string name="bottomnav_home">Home</string>
    <string name="bottomnav_discover">Discover</string>
    <string name="bottomnav_meal_plan">Planner</string>
    <string name="item_recipes_image">Recipes Image</string>
    <string name="item_recipename">Cumi Goreng Tepung</string>
    <string name="detail_recipe_image">recipe Image</string>
    <string name="discover_ada_bahan_apa_hari_ini">Ada Bahan Apa Hari ini?</string>
    <string name="discover_scan_food_ingredients">Scan Food Ingredients</string>
    <string name="discover_search">Search</string>
    <string name="camera_ingredients_image">ingredients image</string>
    <string name="camera_open_gallery">Open Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_hasil_scan">Hasil Scan</string>
    <string name="camera_take_photo">Take Photo</string>
    <string name="nav_profile">Profile</string>
    <string name="main_use_camera_to_scan">Use camera to scan</string>
    <string name="planner_this_week">This Week</string>
</resources>