<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern_v3"
    tools:context=".ui.activity.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/welcome_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bantumasak_logo" />

    <TextView
        android:id="@+id/slogan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_slogan"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_signup"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#CCE8E2"
        android:text="@string/welcome_signup"
        android:textColor="#4A635E"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_login"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#006B5F"
        android:text="@string/welcome_login"
        android:textColor="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>