<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.camera.CameraFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_takePhoto"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#006B5F"
        android:text="@string/camera_take_photo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toTopOf="@+id/camera_openGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/camera_ingredientsImg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/camera_ingredients_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_openGallery"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#CCE8E2"
        android:text="@string/camera_open_gallery"
        android:textColor="#4A635E"
        android:textStyle="bold"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/camera_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_ingredientsImg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>